[metadata]
name = causal_effect_ci
version = "0.0.1"
description= "Code for an article - including development files"
long_description = file: readme.md
long_description_content_type = "text/markdown"

[options]
packages = find:

[flake8]
max-line-length=88
# E203 is against PEP8
# W503 is against PEP8
# E712 works badly with logical columns in pandas
# W293 is an annoyance in docstrings that have blank lines
# F541 is not important enough to bother fixing
ignore=E203, W503, E712, W293, F541